deploy/helms/example/public.api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-public-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-public-api
  template:
    metadata:
      labels:
        app: example-public-api
    spec:
      containers:
        - name: example-public-api
          image: example_public_api:latest
          imagePullPolicy: IfNotPresent
          #livenessProbe:
          #  httpGet:
          #    path: /health/liveness
          #    port: 5101
          #  initialDelaySeconds: 10
          #  periodSeconds: 30
          #readinessProbe:
          #  httpGet:
          #    path: /health/readiness
          #    port: 5101
          #  timeoutSeconds: 10
          #  periodSeconds: 30
          ports:
            - containerPort: 5101
          volumeMounts:
          - name: elastic-apm-agent-hook
            mountPath: /app/ElasticApmAgent
            readOnly: true
      volumes:
        - name: elastic-apm-agent-hook
          hostPath:
            path: "/host_mnt/c/work/meta/services/src/Helpers/ElasticApmAgent"
            type: Directory
